kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: ecommerce-frontend
spec:
  type: ClusterIP
  selector:
    app: ecommerce-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
